2007-02-25  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.c (VASNPRINTF): Fix estimate of size needed for a 'a' or
	'A' conversion.

2007-01-29  Bruno Haible  <bruno@clisp.org>

	* printf-args.h: Use '#if HAVE_*' instead of '#ifdef HAVE_*'.
	* printf-args.c: Likewise.
	* printf-parse.c: Likewise.
	* vasnprintf.c: Likewise.

2007-01-27  Bruno Haible  <bruno@clisp.org>

	* tsearch.h: New file, from gnulib.
	* tsearch.c: New file, from gnulib.
	* dcigettext.c [!HAVE_TSEARCH]: Include tsearch.h and tsearch.c.
	(root, transcmp): Define unconditionally.
	(DCIGETTEXT): Assume tsearch exists.
	* Makefile.in (HEADERS): Add tsearch.h, tsearch.c.

2006-12-21  Bruno Haible  <bruno@clisp.org>

	* localename.c (SUBLANG_BENGALI_INDIA): Change value from 0 to 1.
	(SUBLANG_BENGALI_BANGLADESH): Change value from 1 to 2.
	(SUBLANG_PUNJABI_INDIA): Change value from 0 to 1.
	(SUBLANG_PUNJABI_PAKISTAN): Change value from 1 to 2.
	(SUBLANG_ROMANIAN_ROMANIA): Change value from 0 to 1.
	(SUBLANG_ROMANIAN_MOLDOVA): Change value from 1 to 2.
	(SUBLANG_SINDHI_INDIA): Remove macro.
	(SUBLANG_SINDHI_AFGHANISTAN): New macro.
	(SUBLANG_TAMAZIGHT_ALGERIA_LATIN): Renamed from
	SUBLANG_TAMAZIGHT_LATIN.
	(SUBLANG_TIGRINYA_ETHIOPIA): Change value from 0 to 1.
	(SUBLANG_TIGRINYA_ERITREA): Change value from 1 to 2.
	(_nl_locale_name_default): Update.
	Reported by Bob Rossi <bob_rossi@cox.net>.

2006-10-30  Bruno Haible  <bruno@clisp.org>

	* plural-exp.h [C++]: Define functions without name mangling.

2006-11-03  Bruno Haible  <bruno@clisp.org>

	Move declarations to header files.
	* dcigettext.c: Include localcharset.h.
	(get_output_charset): Remove locale_charset declaration.

2006-10-30  Bruno Haible  <bruno@clisp.org>

	Move declarations to header files.
	* gettextP.h (_nl_default_dirname, _nl_domain_bindings): New
	declarations and aliases.
	(_nl_default_default_domain, _nl_current_default_domain): New
	declarations and aliases.
	* bindtextdom.c (_nl_default_dirname, _nl_domain_bindings): Remove